--- a/app/src/main/res/layout/activity_pin.xml
+++ b/app/src/main/res/layout/activity_pin.xml
@@ -3,14 +3,13 @@
               android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
->
+              android:fitsSystemWindows="true">
     <include layout="@layout/toolbar"/>
     <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:gravity="center"
-            android:padding="@dimen/fullscreen_dialog_padding"
-    >
+            android:padding="@dimen/fullscreen_dialog_padding">
         <EditText
                 android:id="@+id/pin_edit_text"
                 android:layout_width="match_parent"
