--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -3,11 +3,10 @@
               android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
->
+              android:fitsSystemWindows="true">
     <include layout="@layout/toolbar"/>
     <fragment android:name="in.eigene.miary.fragments.SettingsFragment"
               android:id="@+id/fragment_settings"
               android:layout_width="match_parent"
-              android:layout_height="match_parent"
-    />
+              android:layout_height="match_parent"/>
 </LinearLayout>
