--- a/app/src/main/res/layout/fragment_feed.xml
+++ b/app/src/main/res/layout/fragment_feed.xml
@@ -2,13 +2,11 @@
 <RelativeLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
->
+        android:layout_height="match_parent">
     <android.support.v4.widget.SwipeRefreshLayout
             android:id="@+id/feed_refresh"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-    >
+            android:layout_height="match_parent">
         <android.support.v7.widget.RecyclerView
                 android:id="@+id/feed_view"
                 android:layout_width="match_parent"
