--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -2,8 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="vertical"
               android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:fitsSystemWindows="true">
+              android:layout_height="match_parent">
     <include layout="@layout/toolbar"/>
     <fragment android:name="in.eigene.miary.fragments.SettingsFragment"
               android:id="@+id/fragment_settings"
