--- a/app/src/main/res/layout/activity_feed.xml
+++ b/app/src/main/res/layout/activity_feed.xml
@@ -43,6 +43,5 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="start"
-        app:menu="@menu/navigation_view"
-        app:headerLayout="@layout/drawer_header"/>
+        app:menu="@menu/navigation_view"/>
 </android.support.v4.widget.DrawerLayout>
