--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="primary">@color/blue_500</color>
+    <color name="primary_dark">@color/blue_700</color>
     <!-- Material colors. -->
     <color name="dark_text_hint">#4DFFFFFF</color>
     <color name="dark_text_primary">#FFFFFFFF</color>
