--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -2,13 +2,13 @@
 <resources>
     <string-array name="empty_array"/>
     <string-array name="weekdays">
-        <item>@string/dialog_reminder_monday</item>
-        <item>@string/dialog_reminder_tuesday</item>
-        <item>@string/dialog_reminder_wednesday</item>
-        <item>@string/dialog_reminder_thursday</item>
-        <item>@string/dialog_reminder_friday</item>
-        <item>@string/dialog_reminder_saturday</item>
-        <item>@string/dialog_reminder_sunday</item>
+        <item>Monday</item>
+        <item>Tuesday</item>
+        <item>Wednesday</item>
+        <item>Thursday</item>
+        <item>Friday</item>
+        <item>Saturday</item>
+        <item>Sunday</item>
     </string-array>
     <string-array name="weekdays_values" translatable="false">
         <item>2</item>
@@ -18,6 +18,18 @@
         <item>6</item>
         <item>7</item>
         <item>1</item>
+    </string-array>
+    <string-array name="font_size_titles">
+        <item>Smallest</item>
+        <item>Smaller</item>
+        <item>Larger</item>
+        <item>Largest</item>
+    </string-array>
+    <string-array name="font_size_values">
+        <item>14</item>
+        <item>16</item>
+        <item>18</item>
+        <item>20</item>
     </string-array>
     <string-array name="welcome_titles">
         <item>Welcome!</item>
