--- a/app/src/main/res/layout/fragment_note.xml
+++ b/app/src/main/res/layout/fragment_note.xml
@@ -40,8 +40,7 @@
     <EditText
         android:id="@+id/note_edit_text"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
+        android:layout_height="match_parent"
         android:inputType="textMultiLine|textCapSentences"
         android:gravity="top|start"
         android:hint="@string/note_hint"
