#240: Yet smaller font size.

--- a/app/src/main/res/values-ru/arrays.xml
+++ b/app/src/main/res/values-ru/arrays.xml
@@ -12,6 +12,7 @@
     <string-array name="font_size_titles">
         <item>Наименьший</item>
         <item>Меньше среднего</item>
+        <item>Средний</item>
         <item>Больше среднего</item>
         <item>Наибольший</item>
     </string-array>
