--- a/app/src/main/res/values-ru/arrays.xml
+++ b/app/src/main/res/values-ru/arrays.xml
@@ -32,4 +32,8 @@
         <item>Резервное копирование в память устройства, на карту памяти или в Dropbox поможет сохранить записи.</item>
         <item>Начните записывать то, о чем вы думаете. Когда-нибудь вы с интересом прочтете свой дневник.</item>
     </string-array>
+    <string-array name="theme_titles">
+        <item>Светлая</item>
+        <item>Темная</item>
+    </string-array>
 </resources>
