--- a/app/src/main/res/layout/drawer_header.xml
+++ b/app/src/main/res/layout/drawer_header.xml
@@ -8,7 +8,7 @@
     android:paddingStart="16dp"
     android:paddingRight="16dp"
     android:paddingTop="8dp"
-    android:background="@color/primary">
+    android:background="?colorPrimary">
 
     <LinearLayout
         android:layout_width="match_parent"
