--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -58,4 +58,12 @@
         <item>0xFFFFA726</item>
         <item>0xFFFFEB3B</item>
     </integer-array>
+    <string-array name="theme_titles">
+        <item>Light</item>
+        <item>Dark</item>
+    </string-array>
+    <string-array name="theme_values" translatable="false">
+        <item>Miary.Theme</item>
+        <item>Miary.Theme.Dark</item>
+    </string-array>
 </resources>
