--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,19 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="primary">@color/blue_500</color>
-    <color name="primary_dark">@color/blue_700</color>
     <!-- Material colors. -->
     <color name="dark_text_hint">#4DFFFFFF</color>
     <color name="dark_text_primary">#FFFFFFFF</color>
     <color name="light_divider">#1F000000</color>
-    <color name="light_text_helper">#61000000</color>
     <color name="light_text_hint">#43000000</color>
     <color name="light_text_primary">#DE000000</color>
     <!-- Material palette. -->
+    <color name="blue_400">#42A5F5</color>
     <color name="blue_500">#2196F3</color>
     <color name="blue_700">#1976D2</color>
     <color name="blue_grey_500">#607D8B</color>
+    <color name="blue_grey_800">#37474F</color>
+    <color name="blue_grey_900">#263238</color>
     <color name="grey_50">#FAFAFA</color>
+    <color name="grey_800">#424242</color>
+    <color name="grey_900">#212121</color>
     <color name="light_green_500">#8BC34A</color>
     <color name="red_500">#F44336</color>
     <color name="white">#FFFFFF</color>
