--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -23,6 +23,13 @@
         android:title="@string/prefcat_title_appearance">
 
         <ListPreference
+            android:key="@string/prefkey_theme"
+            android:title="@string/preference_title_theme"
+            android:defaultValue="Miary.Theme"
+            android:entries="@array/theme_titles"
+            android:entryValues="@array/theme_values"/>
+
+        <ListPreference
             android:key="@string/prefkey_font_size"
             android:title="@string/preference_title_font_size"
             android:defaultValue="18"
