--- a/app/src/main/res/values-ru/arrays.xml
+++ b/app/src/main/res/values-ru/arrays.xml
@@ -36,4 +36,16 @@
         <item>Светлая</item>
         <item>Темная</item>
     </string-array>
+    <string-array name="about_titles">
+        <item>ВКонтакте</item>
+        <item>Фейсбук</item>
+        <item>Telegram</item>
+        <item>Google+</item>
+    </string-array>
+    <string-array name="about_links">
+        <item>https://vk.com/miaryapp</item>
+        <item>https://www.facebook.com/miaryapp</item>
+        <item>https://telegram.me/joinchat/AA5T1QjPdksR3YgiQiv9zA</item>
+        <item>https://plus.google.com/communities/105005072306337762911</item>
+    </string-array>
 </resources>
