--- a/app/src/main/res/layout/activity_feed.xml
+++ b/app/src/main/res/layout/activity_feed.xml
@@ -43,5 +43,6 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="start"
-        app:menu="@menu/navigation_view"/>
+        app:menu="@menu/navigation_view"
+        app:itemIconTint="?attr/navigationItemIconTint"/>
 </android.support.v4.widget.DrawerLayout>
