--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,6 +14,7 @@
     <color name="blue_grey_800">#37474F</color>
     <color name="blue_grey_900">#263238</color>
     <color name="grey_50">#FAFAFA</color>
+    <color name="grey_600">#757575</color>
     <color name="grey_800">#424242</color>
     <color name="grey_900">#212121</color>
     <color name="light_green_500">#8BC34A</color>
