#108 #57 Store Dropbox authentication token in the account. Remove unused classes and code.

--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -57,6 +57,17 @@
     </PreferenceCategory>
 
     <PreferenceCategory
+        android:key="@string/prefkey_dropbox"
+        android:persistent="false"
+        android:title="@string/preference_title_dropbox">
+
+        <Preference
+            android:key="@string/prefkey_link_dropbox"
+            android:persistent="false"
+            android:title="@string/preference_title_link_dropbox"/>
+    </PreferenceCategory>
+
+    <PreferenceCategory
         android:key="@string/prefkey_backup"
         android:persistent="false"
         android:title="@string/preference_title_backup">
