--- a/app/src/main/res/layout/activity_feedback.xml
+++ b/app/src/main/res/layout/activity_feedback.xml
@@ -13,6 +13,13 @@
         android:orientation="vertical"
         android:padding="@dimen/fullscreen_dialog_padding">
 
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingBottom="16dp"
+            android:text="@string/feedback_comment"
+            style="@style/TextAppearance.AppCompat.Body1"/>
+
         <android.support.design.widget.TextInputLayout
             android:id="@+id/feedback_email_layout"
             android:layout_width="match_parent"
