Fix Telegram chat link again.

--- a/app/src/main/res/values-ru/arrays.xml
+++ b/app/src/main/res/values-ru/arrays.xml
@@ -45,7 +45,7 @@
     <string-array name="about_links">
         <item>https://vk.com/miaryapp</item>
         <item>https://www.facebook.com/miaryapp</item>
-        <item>https://telegram.me/joinchat/AA5T1QjPdksR3YgiQiv9zA</item>
+        <item>https://telegram.me/miaryapp</item>
         <item>https://plus.google.com/communities/105005072306337762911</item>
     </string-array>
     <string-array name="pin_timeout_titles">
