--- a/app/src/main/res/layout/action_counter.xml
+++ b/app/src/main/res/layout/action_counter.xml
@@ -4,5 +4,5 @@
     android:layout_width="wrap_content"
     android:layout_height="match_parent"
     android:gravity="center_vertical"
-    android:textColor="?android:textColorHint"
+    android:textColor="?attr/colorPrimary"
     style="@style/TextAppearance.AppCompat.Body1"/>
