--- a/app/src/main/res/layout/fragment_feed.xml
+++ b/app/src/main/res/layout/fragment_feed.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
     <android.support.v4.widget.SwipeRefreshLayout
@@ -17,11 +18,10 @@
     </android.support.v4.widget.SwipeRefreshLayout>
     <ImageView
             android:id="@+id/feed_empty_view"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_centerVertical="true"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:visibility="gone"
-            android:scaleType="center">
+            android:scaleType="center"
+            tools:ignore="ContentDescription">
     </ImageView>
 </RelativeLayout>
